# pyhack

./: EH_agent.py  README.md  main.py  navana_ai.py  promtps.txt  pyproject.toml  speech_to_text.py  system_prompt.txt  text_to_speak.py  text_to_speech.py
