[project]
name = "pyhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "openai>=1.63.0",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "websockets==12.0",
    "wave>=0.0.1",
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "certifi>=2024.1.5",
    "mcp[cli]>=1.2.1",
    "httpx>=0.28.1",
    "fastapi>=0.115.8",
    "crewai>=0.95.0",
    "scipy>=1.15.2",
    "boto3>=1.36.22",
    "twilio>=9.4.5",
    "motor>=3.7.0",
]
